# UniverseStudio

./: .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  imgui.ini
.github/workflows/: cmake-multi-platform.yml
include/: Callback.h  Camera.h  Components.h  Cubemap.h  Entity.h  EntityManager.h  Mesh.h  Model.h  Renderer.h  Shader.h  Skybox.h  UI.h
include/GLFW/: glfw3.h
include/assimp/: BaseImporter.h  SmoothingGroups.inl  StringUtils.h  Vertex.h  XmlParser.h  cimport.h  config.h  defs.h  material.h  material.inl  matrix3x3.inl  matrix4x4.inl  metadata.h  postprocess.h  quaternion.inl  revision.h.in  types.h  vector2.inl  vector3.inl
include/assimp/Compiler/: poppack1.h  pstdint.h  pushpack1.h
include/assimp/port/AndroidJNI/: AndroidJNIIOSystem.h  BundledAssetIOSystem.h
include/glad/: glad.h
include/glfw/include/GLFW/: glfw3.h
include/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h
include/ncp/: Simulation.h  Vec3.h
res/planets/earth/: earth.blend
res/planets/moon/: moon.blend  moon.blend1  moon.mtl
res/stars/sun/: sun.blend  sun.blend1  sun.mtl
src/: Callback.cpp  Camera.cpp  Cubemap.cpp  Entity.cpp  EntityManager.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Skybox.cpp  glad.c  main.cpp
src/ncp/: Sim.cpp  Simulation.cpp  Vec3.cpp
